# tempoch-js

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  package.json
.github/workflows/: ci.yml
scripts/: ci.sh
tempoch-node/: .gitignore  .prettierignore  Cargo.toml  README.md  c8.config.json  eslint.config.js  index.d.ts  index.js  native.cjs  package-lock.json  package.json  tempoch.linux-x64-gnu.node
tempoch-node/__test__/: index.test.mjs
tempoch-node/examples/: periods.mjs  quickstart.mjs  timescales.mjs
tempoch-node/lib/: JulianDate.js  ModifiedJulianDate.js  Period.js  backend.js  qttyCompat.js
tempoch-node/src/: lib.rs
tempoch-web/: Cargo.toml  index.d.ts  index.js  package.json
tempoch-web/lib/: JulianDate.js  ModifiedJulianDate.js  Period.js  backend.js
tempoch-web/src/: lib.rs
