[package]
name = "tempoch-web"
version = "0.1.0"
edition = "2021"
authors = ["VPRamon <vallespuigramon@gmail.com>"]
license = "AGPL-3.0"
repository = "https://github.com/Siderust/tempoch"
description = "Browser/WASM bindings for tempoch — astronomical time primitives in the browser"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tempoch = "0.3.0"
qtty = "0.4.0"
chrono = "0.4"
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[patch.crates-io]
tempoch = { path = "../tempoch/tempoch" }
